sorted out whitespace issue and textwrapping

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,5 @@
 /* Empty. Add your own CSS if you like */
+h3.story-title{
+    white-space: normal;
+    height:3.6em;
+}
